2 files modified, 1 added

--- a/src/app/horizontalScroll/horizontalScroll.component.html
+++ b/src/app/horizontalScroll/horizontalScroll.component.html
@@ -9,9 +9,9 @@
     </footer>
   </blockquote>
 
-  <div class="overflow-auto p-2 " bassFixedHeaderDirective [tableId]="'cutomTableId'"
-    [tableTHeadId]="'cutomTableTHeadId'" [extraTopPx]="50" [tableTHeadTrId]="'cutomTableTHeadTrId'"
-    [tableTBodyId]="'cutomTableTBodyId'" [pageUpdated]="pageUpdated" [pageDestored]="pageDestored">
+  <div class="overflow-auto p-2 " bassHorizontalScroll [tableId]="'cutomTableId'"
+    [tableTHeadId]="'cutomTableTHeadId'" [tableTHeadTrId]="'cutomTableTHeadTrId'"
+     [pageUpdated]="pageUpdated" [pageDestored]="pageDestored">
     <table id="cutomTableId" class="table table-striped table-bordered table-hover">
       <thead id="cutomTableTHeadId">
         <tr id="cutomTableTHeadTrId">
@@ -19,7 +19,7 @@
           <th scope="col" class="heightAndwidth thStyles">Name</th>
         </tr>
       </thead>
-      <tbody id="cutomTableTBodyId">
+      <tbody >
         <tr *ngFor="let item of dataList">
           <td class="heightAndwidth">{{item.email}}</td>
           <td class="heightAndwidth">{{item.name}}</td>
