--- a/src/app/horizontalScroll/horizontalScroll.component.css
+++ b/src/app/horizontalScroll/horizontalScroll.component.css
@@ -1,13 +1,13 @@
 
-#z2TblScrollBar::-webkit-scrollbar,
-.z2tableContainer::-webkit-scrollbar {
+#BassScrollBar::-webkit-scrollbar,
+.BassBarContainer::-webkit-scrollbar {
   width: 10px;
   height: 17px;
   background: transparent;
 }
 
-#z2TblScrollBar::-webkit-scrollbar-thumb,
-.z2tableContainer::-webkit-scrollbar-thumb {
+#BassScrollBar::-webkit-scrollbar-thumb,
+.BassBarContainer::-webkit-scrollbar-thumb {
   background-image: -webkit-gradient(
     linear,
     left bottom,
@@ -19,8 +19,8 @@
   border: #b0acac 1px solid;
   border-radius: 5px;
 }
-#z2TblScrollBar::-webkit-scrollbar-thumb:hover,
-.z2tableContainer::-webkit-scrollbar-thumb:hover {
+#BassScrollBar::-webkit-scrollbar-thumb:hover,
+.BassBarContainer::-webkit-scrollbar-thumb:hover {
   background-image: -webkit-gradient(
     linear,
     left bottom,
