--- a/src/app/horizontalScroll/horizontalScroll.component.html
+++ b/src/app/horizontalScroll/horizontalScroll.component.html
@@ -1,7 +1,7 @@
 <div class="mt-5">
 
   <blockquote class="blockquote text-center">
-    <p class="mb-0">Try to add/remove column. </p>
+    <p class="mb-0">Try to add/remove columns. </p>
     <footer>
       <button type="button" (click)="remove7CL()" class="btn btn-info">
         {{remove7 ? 'Remove' : 'Add'}} 7 Column.
